<resources>
    <string name="app_name">Orpat Service Center</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="fcm_sender_id">22742525395</string>
    <string name="select_your_role">Select your Role</string>
    <string name="admin">Admin</string>
    <string name="technician">Technician</string>
    <string name="btn_continue">Continue</string>
    <string name="step_1">STEP 1</string>
    <string name="step_2">STEP 2</string>
    <string name="step_3">STEP 3</string>
    <string name="welcome_to_orpat_service_center">Welcome to Orpat\nService Center</string>
    <string name="enter_your_mobile_no_to_continue">Enter your mobile no. to continue</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="please_verify_the_code_sent_to_your_mobile_number">Please verify the code sent to your\nmobile number +91</string>
    <string name="verification">Verification</string>
    <string name="verify">Verify</string>
    <string name="warning_select_admin_technician">Please select user Admin or Technician!</string>
    <string name="warning_mobile_number">Mobile number should be 10 digit!</string>
    <string name="warning_enter_OTP">Please enter 4-digit OTP, received by sms.</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="otp_resend">OTP Resend!</string>
    <string name="message_resend_otp">You will receive your OTP Code on your registered contact details shortly.</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="request">Request</string>
    <string name="add_technician">Add Technician</string>
    <string name="history">History</string>
    <string name="service_video">Service Videos</string>
    <string name="installation_video">Installation Videos</string>
    <string name="profile">Profile</string>
    <string name="payment">Payment</string>
    <string name="more">More</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="pin_code">Pin code</string>
    <string name="upload_image">Upload Image</string>
    <string name="image_title">Upload profile image here</string>
    <string name="part_image_title">Upload part image here</string>
    <string name="btn_submit">Submit</string>
    <string name="first_name_required">First name is required</string>
    <string name="last_name_required">Last name is required</string>
    <string name="phone_number_required">Phone Number is required</string>
    <string name="pin_code_required">Pin Code is required</string>
    <string name="number_invalid">"Invalid Phone Number "</string>
    <string name="pin_code_invalid">"Invalid Pin code"</string>
    <string name="please_select">Please Select Image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="requests">Requests</string>
    <string name="btn_reject">Reject</string>
    <string name="btn_view_details">View Details</string>
    <string name="service_center">Service Center</string>
    <string name="toolbar_title_history">History</string>
    <string name="edit"><u>Edit</u></string>
    <string name="activate">Activate</string>
    <string name="deactivate">Deactivate</string>
    <string name="customer_details">Customer Details</string>
    <string name="btn_assign_to_technician">Assign to Technician</string>
    <string name="btn_close_complaint">Close Complaint</string>
    <string name="request_id">Request Id</string>
    <string name="customer_name">Customer Name</string>
    <string name="request_date">Request Date</string>
    <string name="assign_date">Assign Date</string>
    <string name="contact_number">Contact Number</string>
    <string name="full_address">Full Address</string>
    <string name="model_name">Model Name</string>
    <string name="date_of_purchase">Date of Purchase</string>
    <string name="invoice_image">Invoice Image</string>
    <string name="qr_code_image">QR Code Image</string>
    <string name="warranty_status">Warranty Status</string>
    <string name="no_leads">No leads</string>
    <string name="menu_search">Search</string>
    <string name="user_profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="setting">Setting</string>
    <string name="notifications">Notifications</string>
    <string name="supports">Supports</string>
    <string name="enter_your_email_and_password_to_continue">Enter your Email and Password to continue</string>
    <string name="email">Email Id</string>
    <string name="password">Password</string>
    <string name="error_email">Enter valid email address</string>
    <string name="error_password">Enter valid password</string>
    <string name="error_reason_rejection">Enter valid rejection reason</string>
    <string name="select_technician">Please Select Technician</string>
    <string name="search_leads">Search leads</string>
    <string name="select_parts">Select Parts</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="reject_lead">Reject Lead!</string>
    <string name="reject">Reject Lead</string>
    <string name="reason_for_rejection">Reason for rejection</string>
    <string name="please_enter_reason_for_rejection">Please enter reason for rejection.</string>
    <string name="enquiries"><u>Enquiries</u></string>
    <string name="remark">Remarks</string>
    <string name="search">Search</string>
    <string name="model_number">Model Number</string>
    <string name="invoice_date">Invoice Date</string>
    <string name="customer_description">Customer Note</string>
    <string name="service_center_description">Service Center Note</string>
    <string name="type_here">Type here</string>
    <string name="invoice_number">Invoice Number</string>
    <string name="upload_invoice">Upload Invoice</string>
    <string name="upload">Upload</string>
    <string name="warranty_end_date">Warranty End Date:</string>
    <string name="under_warranty">Under Warranty</string>
    <string name="cancel_lead"><u><b><i>Cancel Lead</i></b></u></string>
    <string name="cancel_task">Cancel Task</string>
    <string name="technician_name">Technician Name</string>
    <string name="btn_complete_task">Complete Task</string>
    <string name="warranty">Warranty</string>
    <string name="have_you_change_any_part">Have You Change Any Part</string>
    <string name="select_parts_covered_under_warranty">Select replaced parts covered under warranty</string>
    <string name="btn_update">Update</string>
    <string name="select_date">Select Date</string>
    <string name="service_center_discription">Please Enter Description</string>
    <string name="invoicenumber">Please Enter Invoice Number</string>
    <string name="service_center_cancel_reason">Please Enter Cancel Reason</string>
    <string name="assign">Assign</string>
    <string name="area_code">Lead Count</string>
    <string name="task_assigned">Task Assigned</string>
    <string name="task_completed">Task Completed</string>
    <string name="txt_qrcode_verify">QR Code Successfully Verify</string>
    <string name="btn_task_completed">Task Completed</string>
    <string name="scan_barcode">Scan QRCode</string>
    <string name="task_details">Task Details</string>
    <string name="otp_varification">OTP Verification</string>
    <string name="timer">Timer</string>
    <string name="btn_update_technician">Update Technician</string>
    <string name="technician_details">Technician Details</string>
    <string name="btn_change_technician">Change Technician</string>
    <string name="servicing_done_string">Servicing Done</string>
    <string name="product_no_complaint_string">Product has no complaint</string>
    <string name="not_covered_string">Part not covered under warranty</string>
    <string name="error_service_center_desc">*Please Enter Service Center Note</string>
    <string name="upload_part_image">Upload Part Image</string>
    <string name="error_invoice_number_string">*Please Enter Invoice Number</string>
    <string name="error_invoice_date_string">*Please Select Invoice Date</string>
    <string name="error_under_warranty">*Please Select Under Warranty</string>
    <string name="product_string">Product 01</string>
    <string name="scan_qr_code_string">Scan the QR Code,\nto validate your product</string>
    <string name="total_count">Total=</string>
    <string name="btn_direction">Direction</string>
    <string name="cutomer_names">Customer Name :</string>
    <string name="service_type_label">Lead Type :</string>
    <string name="btn_update_parts">Update Parts</string>
    <string name="btn_verify_parts">Verify &amp; Update Parts</string>
    <string name="btn_update_otp">Update OTP</string>
    <string name="btn_happy_code">Send Happy Code</string>
    <string name="resend_happy_code">Resend happy code</string>
    <string name="select_image">Select Image</string>
    <string name="select">Select</string>
    <string name="create_task">Create Task</string>
    <string name="btn_add_task">Add Task</string>
    <string name="upload_gst_invoice">Upload printed GST invoice</string>
    <string name="prblm_details_string">Explain your problem in details</string>
    <string name="proceed_string">Proceed</string>
    <string name="chargeable_request">Chargeable Request</string>
    <string name="chargeable_details">Chargeable Details</string>
    <string name="finish">Finish</string>
    <string name="btn_cancel">Cancel</string>
    <string name="gst_num_string">Check Seller\'s GSTIN Validity</string>
    <string name="error_gst_number_string">* Please Enter GST Number</string>
    <string name="gst_in_string">Check GSTIN</string>
    <string name="gst_trade_name">GST Trade Name</string>
    <string name="gst_name_string">GST Name</string>
    <string name="btn_generate_chageable">Create Chargeable Req</string>
    <string name="service_center_gst_num">Please Enter GST Number</string>
    <string name="btn_scan">Scan QR Code</string>
    <string name="btn_cancel_task"><u>Cancel Task</u></string>
    <string name="service_done">Service Done</string>
    <string name="btn_service_cancel">Service Cancel</string>
    <string name="customer_note">Customer Note</string>
    <string name="string_seller_name">*Please Enter Seller Name</string>
    <string name="seller_text_string">Seller Name</string>
    <string name="aadhar_card">Aadhar Card</string>
    <string name="service_center_note">Service Center Note</string>
    <string name="customer_issue">Customer Issue</string>
    <string name="complaint_preset">Complaint Preset</string>
    <string name="upload_aadhar_card">Upload Aadhar Card</string>
    <string name="force_update_title_string">Hey! It\'s time to update</string>
    <string name="force_update_subtitle_string">There is a new version of the app available.\nClick below to update.</string>
</resources>