<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:translationZ="2dp"
    app:cardCornerRadius="@dimen/corner_radius"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/corner_radius">

        <TextView
            android:id="@+id/tv_model_name"
            style="@style/Theme.OrpatServiceCenter.SmallRegularText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:padding="2dp"
            android:text="@string/model_name"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toStartOf="@id/tv_warranty_status"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_model_name_value"
            style="@style/Theme.OrpatServiceCenter.SmallText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:textAlignment="textStart"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/tv_model_name"
            app:layout_constraintStart_toStartOf="@id/tv_model_name"
            app:layout_constraintTop_toBottomOf="@id/tv_model_name"
            tools:text="0000000122" />

        <TextView
            android:id="@+id/tv_warranty_status"
            style="@style/Theme.OrpatServiceCenter.SmallRegularText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:padding="2dp"
            android:text="@string/warranty_status"
            android:textAlignment="textEnd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_model_name"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_warranty_status_value"
            style="@style/Theme.OrpatServiceCenter.SmallText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:textAlignment="textEnd"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/tv_warranty_status"
            app:layout_constraintStart_toStartOf="@id/tv_warranty_status"
            app:layout_constraintTop_toBottomOf="@id/tv_warranty_status"
            tools:text="0000000122" />

        <TextView
            android:id="@+id/tv_description"
            style="@style/Theme.OrpatServiceCenter.SmallRegularText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/description"
            android:textAlignment="textStart"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_model_name_value" />


        <TextView
            android:id="@+id/tv_description_value"
            style="@style/Theme.OrpatServiceCenter.SmallText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/description"
            android:textAlignment="textStart"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_description"
            tools:text="Ceiling fans light is flickering" />

        <TextView
            android:id="@+id/tv_invoice_image"
            style="@style/Theme.OrpatServiceCenter.SmallRegularText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/invoice_image"
            app:layout_constraintEnd_toStartOf="@id/tv_qr_code_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_description_value" />

        <ImageView
            android:id="@+id/iv_invoice_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:scaleType="fitXY"
            android:src="@color/orange"
            app:layout_constraintStart_toStartOf="@id/tv_invoice_image"
            app:layout_constraintTop_toBottomOf="@id/tv_invoice_image" />

        <TextView
            android:id="@+id/tv_qr_code_image"
            style="@style/Theme.OrpatServiceCenter.SmallRegularText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/qr_code_image"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@id/tv_invoice_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_invoice_image"
            app:layout_constraintTop_toTopOf="@id/tv_invoice_image" />

        <ImageView
            android:id="@+id/iv_qr_code_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:scaleType="fitXY"
            android:src="@color/orange"
            app:layout_constraintEnd_toEndOf="@id/tv_qr_code_image"
            app:layout_constraintStart_toStartOf="@id/tv_qr_code_image"
            app:layout_constraintTop_toBottomOf="@id/tv_invoice_image" />

        <TextView
            android:id="@+id/tv_purchase"
            style="@style/Theme.OrpatServiceCenter.SmallRegularText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:drawablePadding="6dp"
            android:gravity="center_vertical"
            android:includeFontPadding="false"
            android:text="@string/date_of_purchase"
            app:drawableStartCompat="@drawable/ic_calender"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_invoice_image" />

        <TextView
            android:id="@+id/tv_purchase_at"
            style="@style/Theme.OrpatServiceCenter.SmallText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:textAlignment="textStart"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_purchase"
            tools:text="12-JAN-2021" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_close_complaint"
            style="@style/Theme.OrpatServiceCenter.Buttons_Flat"
            android:layout_width="match_parent"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_height="44dp"
            android:text="@string/btn_close_complaint"
            app:cornerRadius="0dp"
            app:icon="@drawable/ic_arrow_forward"
            app:iconGravity="textEnd"
            app:iconTint="@color/dim_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_purchase_at" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>