<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:translationZ="2dp"
    app:cardCornerRadius="@dimen/corner_radius"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/fab_margin">

        <LinearLayout
            android:id="@+id/li_assign_technician"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_profile_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.385"
            app:srcCompat="@drawable/ic_avatar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

            <TextView
                android:id="@+id/tv_technician_name"
                style="@style/Theme.OrpatServiceCenter.SmallRegularText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="6dp"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:includeFontPadding="false"
                android:text="@string/technician_name"
                app:layout_constraintBottom_toBottomOf="@id/iv_profile_image"
                app:layout_constraintEnd_toStartOf="@id/gl_vertical_end"
                app:layout_constraintTop_toTopOf="@id/iv_profile_image"
                app:layout_constraintVertical_bias="0.217" />

                <TextView
                    android:id="@+id/tv_request_id"
                    style="@style/Theme.OrpatServiceCenter.SmallRegularText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="6dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical"
                    android:includeFontPadding="false"
                    android:text="@string/request_id"
                    app:layout_constraintBottom_toBottomOf="@id/iv_profile_image"
                    app:layout_constraintEnd_toStartOf="@id/gl_vertical_end"
                    app:layout_constraintTop_toTopOf="@id/iv_profile_image"
                    app:layout_constraintVertical_bias="0.217" />

            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_view_details"
            style="@style/Theme.OrpatServiceCenter.Buttons_Flat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/btn_complete_task"
            app:iconGravity="textStart"
            app:iconPadding="2dp"
            app:iconTint="@color/dim_white"
            app:layout_constraintEnd_toStartOf="@id/btn_view_decline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/li_assign_technician" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_view_decline"
            style="@style/Theme.OrpatServiceCenter.Buttons_OffWhite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/btn_reject"
            android:visibility="gone"
            app:icon="@drawable/ic_close"
            app:iconGravity="textStart"
            app:iconPadding="2dp"
            app:iconTint="@color/brown"
            app:layout_constraintBaseline_toBaselineOf="@id/btn_view_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_view_details" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>